<resources>
    <string name="app_name">Lab04_Animation</string>
    <string name="from_xml">From XML</string>
    <string name="from_code">From CODE</string>
    <string name="fade_in">Fade In</string>
    <string name="fade_out">Fade Out</string>
    <string name="blink">Blink</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="rotate">Rotate</string>
    <string name="move">Move</string>
    <string name="slide_up">Slide Up</string>
    <string name="bounce">Bounce</string>
    <string name="combine">Combine</string>
    <string name="back">Back</string>
    <string name="welcome_new_activity">Welcome to New Activity!</string>
</resources>